--- a/index.html
+++ b/index.html
@@ -10,46 +10,60 @@
 
   <body>
     <!-- <div class="bars"> -->
-    <div class="top-left-bar"><h2>PORTFOLIO</h2></div>
+    <div class="top-left-bar"><h1>PORTFOLIO</h1></div>
     <div class="top-bar">
-      <a href="https://www.amazon.com">HOME</a>
-      <a href="https://www.amazon.com">ABOUT</a>
-      <a href="https://www.github.com">WORKS</a>
+      <a href="https://www.google.com" target="_blank">HOME</a>
+      <a href="https://www.facebook.com" target="_blank">ABOUT</a>
+      <a href="https://github.com/Francisco-Fortes?tab=repositories">WORKS</a>
       <a href="https://www.linkedin.com" target="_blank">CONTACT</a>
       <a id="tp-button" href="https://epicode.com/" target="_blank"
         >LEARNING AT</a
       >
     </div>
-    <div class="top-right-down-bar">soy la top down right bar</div>
-    <!-- <div class="main-part-border">Soy el borde de la main part</div> -->
+    <div class="top-right-down-bar">
+      <div>
+        <p id="namep1">My name is <span>Francisco Fortes</span></p>
+
+        <p id="namep2">I am going to be a FS Developer</p>
+      </div>
+      <div id="aboutme">
+        <span
+          >Education: English Studies Degree - Universidad de La Laguna,
+          Spain</span
+        >
+        <span>Work: Most recent one IT Service Desk Specialist</span>
+        <span>Hobbies: Cooking, Gaming and Basketball</span>
+      </div>
+    </div>
     <div class="main-part">
       <h3>MY WORK</h3>
       <div class="pictures">
         <img
           id="img1"
           src="//www.html.am/images/samples/remarkables_queenstown_new_zealand-300x225.jpg"
-          alt="laptop"
+          alt="los-gigantes"
         />
-        <p>hola</p>
+        <p>Los Gigantes</p>
       </div>
       <div class="pictures">
         <img
           id="img2"
           src="//www.html.am/images/samples/remarkables_queenstown_new_zealand-300x225.jpg"
-          alt="watches"
+          alt="las-teresitas"
         />
-        <p>hola</p>
+        <p>Las Teresitas</p>
       </div>
       <div class="pictures">
+        <div id="img3-overlay"></div>
         <img
           id="img3"
           src="//www.html.am/images/samples/remarkables_queenstown_new_zealand-300x225.jpg"
-          alt="dogs"
+          alt="iguesque"
         />
-        <p>hola</p>
+        <p>Iguesque</p>
       </div>
     </div>
     <!-- </div> -->
-    <div class="bottom-part">SOY LA PARTE DE ABAJO</div>
+    <!-- <div class="bottom-part">SOY LA PARTE DE ABAJO</div> -->
   </body>
 </html>
