--- a/index.html
+++ b/index.html
@@ -9,61 +9,25 @@
   </head>
 
   <body>
+    <div class="main-division">
+      <div id="top-left">
+        <div id="child1">child1</div>
+        <div id="child2">child2</div>
+        <div id="child3">child3</div>
+      </div>
+      <div id="top-right">"top-right"</div>
+      <div id="bottom-left">"bottom-left"</div>
+      <div id="bottom-right">"bottom-right"</div>
+    </div>
+  </body>
+  </html>
     <!-- <div class="bars"> -->
-    <div class="top-left-bar"><h1>PORTFOLIO</h1></div>
+    <!-- <div class="top-left-bar"><h1>PORTFOLIO</h1></div>
     <div class="top-bar">
       <a href="https://www.google.com" target="_blank">HOME</a>
       <a href="https://www.facebook.com" target="_blank">ABOUT</a>
       <a href="https://github.com/Francisco-Fortes?tab=repositories">WORKS</a>
       <a href="https://www.linkedin.com" target="_blank">CONTACT</a>
       <a id="tp-button" href="https://epicode.com/" target="_blank"
-        >LEARNING AT</a
-      >
-    </div>
-    <div class="top-right-down-bar">
-      <div>
-        <p id="namep1">My name is <span>Francisco Fortes</span></p>
-
-        <p id="namep2">I am going to be a FS Developer</p>
-      </div>
-      <div id="aboutme">
-        <span
-          >Education: English Studies Degree - Universidad de La Laguna,
-          Spain</span
-        >
-        <span>Work: Most recent one IT Service Desk Specialist</span>
-        <span>Hobbies: Cooking, Gaming and Basketball</span>
-      </div>
-    </div>
-    <div class="main-part">
-      <h3>MY WORK</h3>
-      <div class="pictures">
-        <img
-          id="img1"
-          src="//www.html.am/images/samples/remarkables_queenstown_new_zealand-300x225.jpg"
-          alt="los-gigantes"
-        />
-        <p>Los Gigantes</p>
-      </div>
-      <div class="pictures">
-        <img
-          id="img2"
-          src="//www.html.am/images/samples/remarkables_queenstown_new_zealand-300x225.jpg"
-          alt="las-teresitas"
-        />
-        <p>Las Teresitas</p>
-      </div>
-      <div class="pictures">
-        <div id="img3-overlay"></div>
-        <img
-          id="img3"
-          src="//www.html.am/images/samples/remarkables_queenstown_new_zealand-300x225.jpg"
-          alt="iguesque"
-        />
-        <p>Iguesque</p>
-      </div>
-    </div>
-    <!-- </div> -->
-    <!-- <div class="bottom-part">SOY LA PARTE DE ABAJO</div> -->
-  </body>
-</html>
+        >LEARNING AT</a   
+  
