--- a/index.html
+++ b/index.html
@@ -11,11 +11,25 @@
   <body>
     <div class="main-division">
       <div id="top-left">
-        <div id="child1">child1</div>
-        <div id="child2">child2</div>
-        <div id="child3">child3</div>
+        <div id="child1"><h1>PORTFOLIO</h1></div>
+        <div id="child2">
+          <h3>Hi, my name is <span>Francisco Fortes</span></h3>
+        </div>
+        <div id="child3">
+          <img src="./me.jpg" alt="picture-of-me"/>
+        </div>
       </div>
-      <div id="top-right">"top-right"</div>
+      <div id="top-right">
+        <div id="childtp1">
+          <a href="https://www.google.com" target="_blank">HOME</a>
+          <a href="https://www.facebook.com" target="_blank">ABOUT</a>
+          <a href="https://github.com/Francisco-Fortes?tab=repositories">WORKS</a>
+          <a href="https://www.linkedin.com" target="_blank">CONTACT</a>
+        </div>
+        <div id="childtp2">childtp2</div>
+        <div id="childtp1">childtp3</div>
+        <div id="childtp1">childtp4</div>
+      </div>
       <div id="bottom-left">"bottom-left"</div>
       <div id="bottom-right">"bottom-right"</div>
     </div>
@@ -24,10 +38,7 @@
     <!-- <div class="bars"> -->
     <!-- <div class="top-left-bar"><h1>PORTFOLIO</h1></div>
     <div class="top-bar">
-      <a href="https://www.google.com" target="_blank">HOME</a>
-      <a href="https://www.facebook.com" target="_blank">ABOUT</a>
-      <a href="https://github.com/Francisco-Fortes?tab=repositories">WORKS</a>
-      <a href="https://www.linkedin.com" target="_blank">CONTACT</a>
+
       <a id="tp-button" href="https://epicode.com/" target="_blank"
         >LEARNING AT</a   
   
