--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
     <title>Document</title>
   </head>
 
   <body>
     <div class="main-division">
       <div id="top-left">
-        <div id="child1"><h1>PORTFOLIO</h1></div>
-        <div id="child2">
+        <div id="child1"><h1>Hi, I'm <span>Francisco Fortes</span></h1></div>
+        <!-- <div id="child2">
           <h3>Hi, my name is <span>Francisco Fortes</span></h3>
-        </div>
+        </div> -->
         <div id="child3">
+          <!-- <span>Future FULL STACK DEVELOPER</span> -->
           <img src="./me.jpg" alt="picture-of-me"/>
         </div>
       </div>
@@ -23,15 +26,19 @@
         <div id="childtp1">
           <a href="https://www.google.com" target="_blank">HOME</a>
           <a href="https://www.facebook.com" target="_blank">ABOUT</a>
-          <a href="https://github.com/Francisco-Fortes?tab=repositories">WORKS</a>
+          <a href="https://github.com/Francisco-Fortes?tab=repositories" target="_blank">WORKS</a>
           <a href="https://www.linkedin.com" target="_blank">CONTACT</a>
         </div>
-        <div id="childtp2">childtp2</div>
-        <div id="childtp1">childtp3</div>
-        <div id="childtp1">childtp4</div>
+        <!-- <div id="childtp2">childtp2</div> -->
+        <div id="folder">
+          <p>I am still working on my projects but at some point there will some previews <a href="https://github.com/Francisco-Fortes?tab=repositories" target="_blank">here</a></p>
+        </div>
+        <!-- <div id="childtp4">childtp4</div> -->
       </div>
       <div id="bottom-left">"bottom-left"</div>
-      <div id="bottom-right">"bottom-right"</div>
+      <div id="bottom-right">
+        <ion-icon name="library-outline"></ion-icon>      
+      </div>
     </div>
   </body>
   </html>
