--- a/index.html
+++ b/index.html
@@ -5,47 +5,88 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <title>Document</title>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Portfolio</title>
   </head>
-
   <body>
     <div class="main-division">
       <div id="top-left">
-        <div id="child1"><h1>Hi, I'm <span>Francisco Fortes</span></h1></div>
-        <!-- <div id="child2">
-          <h3>Hi, my name is <span>Francisco Fortes</span></h3>
-        </div> -->
-        <div id="child3">
-          <!-- <span>Future FULL STACK DEVELOPER</span> -->
-          <img src="./me.jpg" alt="picture-of-me"/>
+        <div id="container-tl1">
+          <h1>Hi, I'm <span>Francisco Fortes</span></h1>
+        </div>
+        <div id="container-tl2">
+          <div id="hover-3">
+            <p>
+              <h3>Future FULL STACK DEVELOPER</h3>
+              Born and raised in the Canary Islands, Spain. Since I was a child
+              I was interested in.......
+            </p>
+          </div>
+          <div class="hover"><img src="./me.jpg" alt="picture-of-me" /></div>
         </div>
       </div>
       <div id="top-right">
-        <div id="childtp1">
+        <div id="bar-tp">
           <a href="https://www.google.com" target="_blank">HOME</a>
           <a href="https://www.facebook.com" target="_blank">ABOUT</a>
-          <a href="https://github.com/Francisco-Fortes?tab=repositories" target="_blank">WORKS</a>
+          <a
+            href="https://github.com/Francisco-Fortes?tab=repositories"
+            target="_blank"
+            >PROJECTS</a
+          >
           <a href="https://www.linkedin.com" target="_blank">CONTACT</a>
         </div>
-        <!-- <div id="childtp2">childtp2</div> -->
-        <div id="folder">
-          <p>I am still working on my projects but at some point there will some previews <a href="https://github.com/Francisco-Fortes?tab=repositories" target="_blank">here</a></p>
+        <div id="container-tr">
+          <ul>
+            <li>
+              Studied English Studies Degree in the
+              <a href="https://www.ull.es/en/" target="_blank"
+                >University of La Laguna</a
+              >
+            </li>
+            <li>
+              At the moment learning at
+              <a href="https://epicode.com/" target="_blank">EPICODE</a>
+            </li>
+          </ul>
         </div>
-        <!-- <div id="childtp4">childtp4</div> -->
       </div>
-      <div id="bottom-left">"bottom-left"</div>
+      <div id="bottom-left">
+        <div id="container-bl">
+          <ul>
+            <h4>Worked before as:</h4>
+            <li>Flight Dispatcher</li>
+            <li>Route Sales Representative</li>
+            <li>IT Service Desk Specialist</li>
+          </ul>
+        </div>
+      </div>
       <div id="bottom-right">
-        <ion-icon name="library-outline"></ion-icon>      
+        <div id="container-br">
+          <p>
+            I am still working on my projects but at some point there will some
+            previews
+            <a
+              href="https://github.com/Francisco-Fortes?tab=repositories"
+              target="_blank"
+              >here</a
+            >
+          </p>
+        </div>
       </div>
     </div>
   </body>
-  </html>
-    <!-- <div class="bars"> -->
-    <!-- <div class="top-left-bar"><h1>PORTFOLIO</h1></div>
-    <div class="top-bar">
-
-      <a id="tp-button" href="https://epicode.com/" target="_blank"
-        >LEARNING AT</a   
-  
+</html>
