--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
           <h1>Hi, I'm <span>Francisco Fortes</span></h1>
         </div>
         <div id="container-tl2">
-          <div id="hover-3">
+          <div id="in-container-tl2">
             <p>
               <h3>Future FULL STACK DEVELOPER</h3>
               Born and raised in the Canary Islands, Spain. Since I was a child
               I was interested in.......
             </p>
           </div>
-          <div class="hover"><img src="./me.jpg" alt="picture-of-me" /></div>
+          <div><img src="./me.jpg" alt="picture-of-me" /></div>
         </div>
       </div>
       <div id="top-right">
